k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: app1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app1
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app1
    spec:
      containers:
      - name:  app1
        image: ecr-repo-image-uri
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
