k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  name: app1
spec:
  ports:
    - port: 80
      targetPort: 5002
      protocol: TCP
  type: ClusterIP 
  selector:
    app.kubernetes.io/name: app1
